Visible  Issue Solved

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,12 @@
 @import "tailwindcss";
 
-:root {
+/* :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
   margin:0px;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  /* background-color: #242424; */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -62,4 +61,4 @@ button:focus-visible {
   a:hover {
     color: #747bff;
   }
-}
+} */
